# chromakey

./: BUILD.md  CMakeLists.txt  README.md  changelog.md  chromakey.cpp  chromakey.hpp  main.cpp  mainVideo.cpp  vcpkg.json
.github/workflows/: build_ci_linux_and_macos.yml  build_ci_with_vcpkg.yml  continuous-integration.yml
cmake/: Config.cmake.in
src/: CMakeLists.txt
src/applications/: CMakeLists.txt  README.md  main.cpp  mainVideo.cpp  processImage.cpp  processVideo.cpp
src/chromakey/: CMakeLists.txt  chromakey.cpp  chromakey.hpp
